--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@
   }
   .circle{
       border-radius:50%;
+      display: block;
+    margin-left: 80px;
+    margin-right: 30px;
       
   
   }
@@ -18,7 +21,7 @@
     background-color: aliceblue;
   }
   #resume{
-    width:85px;
+    width:90px;
     height:65px;
     background-color: red;
     position:relative;
