--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 
 .header {
   overflow: hidden;
-  background-color: red;
+  background-color: rgb(228, 77, 77);
   padding: 20px 10px;
 }
 
@@ -64,7 +64,7 @@ body {
   background-color:white;
   overflow-x: hidden;
   padding-top: 20px;
-  border-color: red;
+  border-color: rgb(228, 77, 77);
   border-right-style: solid;
 
 }
@@ -82,12 +82,12 @@ body {
 
 
 .sidenav a:hover {
-  color: #dd2f2f;
+  color: rgb(218, 88, 88);
 }
 
 
 .myprofile{
-  background-color: #c9baba;
+  background-color: #f3eded;
   height: 82vh;
   border-left: red;
 }
@@ -128,7 +128,7 @@ margin-right: 30px;
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color: red;
+  background-color:rgb(228, 77, 77);
   color: white;
   text-align: left;
 }
